--- a/src/wx/vcard/Makefile
+++ b/src/wx/vcard/Makefile
@@ -3,13 +3,14 @@
 # Makefile for libversit library
 
 TARGETS = libversit.a
+SRC:= vobject.c
 
 all: $(TARGETS)
 
 libversit_a_OBJECTS = vcc.o vobject.o # vcaltmp.o
 
 libversit.a: $(libversit_a_OBJECTS)
-	-rm -f libversit.a
+	$(RM) libversit.a
 	$(AR) cru libversit.a $(libversit_a_OBJECTS)
 	$(RANLIB) libversit.a
 
