--- a/src/wx/generic/Makefile
+++ b/src/wx/generic/Makefile
@@ -5,7 +5,7 @@
 # If you change the number of subdirectories, make sure you modify Makefile, too!
 
 CWD = wx
-SRC = persctrl.cpp
+SRC = persctrl.cpp vcarddlg.cpp
 HDR = $(SRC:.cpp=.h)
 DEP = $(SRC:.cpp=.d)
 
