1. added "Insert date" to the template popup menu 2. added "Follow up with template to the menu" 3. added primitive (outgoing) vCard support 4. changed accels for "with template" commands to be Shift+normal accel 5. added vCard importer for the ADB editor

--- a/src/adb/Makefile
+++ b/src/adb/Makefile
@@ -8,7 +8,7 @@ SRC = AdbFrame.cpp AdbManager.cpp AdbProvider.cpp AdbEntry.cpp \
       ExportPalm.cpp ExportText.cpp
 
 #MOD = ImportText.cpp ImportXFMail.cpp ImportPine.cpp ImportMailrc.cpp
-MOD = ImportXFMail.cpp ImportPine.cpp ImportMailrc.cpp
+MOD = ImportXFMail.cpp ImportPine.cpp ImportMailrc.cpp ImportVCard.cpp
 
 ifdef DEBUG
 SRC += ProvDummy.cpp
