--- a/src/modules/Makefile
+++ b/src/modules/Makefile
@@ -30,7 +30,7 @@ SRC := $(SRC) PalmOS.cpp
 
 # for MAL:
 ifdef HAVE_LIBMAL
-CPPFLAGS := $(CPPFLAGS) -DHAVE_LIBMAL -I$(LIBMAL_DIR)/malsync_src/mal/client/common -I$(LIBMAL_DIR)/malsync_src/mal/common
+CPPFLAGS := $(CPPFLAGS) -DHAVE_LIBMAL -I$(LIBMAL_DIR)/malsync_src/mal/client/common -I$(LIBMAL_DIR)/malsync_src/mal/common -I$(LIBMAL_DIR) 
 PISOCK_LIB := $(PISOCK_LIB) -L $(LIBMAL_DIR) -lmal
 endif
 
