--- a/src/adb/Makefile
+++ b/src/adb/Makefile
@@ -4,11 +4,12 @@ CWD = adb
 SRC = AdbFrame.cpp AdbManager.cpp AdbProvider.cpp AdbEntry.cpp \
       AdbDialogs.cpp \
       ProvFC.cpp ProvBbdb.cpp ProvPalm.cpp \
-      AdbImport.cpp AdbExport.cpp \
-      ExportPalm.cpp ExportText.cpp
+      AdbModule.cpp AdbImport.cpp AdbExport.cpp
 
 #MOD = ImportText.cpp ImportXFMail.cpp ImportPine.cpp ImportMailrc.cpp
-MOD = ImportXFMail.cpp ImportPine.cpp ImportMailrc.cpp ImportVCard.cpp
+MOD = ImportXFMail.cpp ImportPine.cpp ImportMailrc.cpp ImportVCard.cpp \
+      ExportPalm.cpp ExportText.cpp
+
 
 ifdef DEBUG
 SRC += ProvDummy.cpp
