made AdbTextImporter link

--- a/src/adb/Makefile
+++ b/src/adb/Makefile
@@ -6,8 +6,8 @@ SRC = AdbFrame.cpp AdbManager.cpp AdbProvider.cpp AdbEntry.cpp \
       ProvFC.cpp ProvBbdb.cpp ProvPalm.cpp \
       AdbModule.cpp AdbImport.cpp AdbExport.cpp
 
-#MOD = ImportText.cpp ImportXFMail.cpp ImportPine.cpp ImportMailrc.cpp
-MOD = ImportXFMail.cpp ImportPine.cpp ImportMailrc.cpp ImportVCard.cpp \
+MOD = ImportText.cpp ImportXFMail.cpp ImportPine.cpp \
+      ImportMailrc.cpp ImportVCard.cpp \
       ExportPalm.cpp ExportText.cpp
 
 
