added MImporter class which will be used to import settings/folders/filters/ADBs from other programs and a stab of MPineImporter

--- a/src/modules/Makefile
+++ b/src/modules/Makefile
@@ -23,7 +23,7 @@
 include ../../makeopts
 
 CWD = modules
-SRC = Mdummy.cpp Filters.cpp Calendar.cpp
+SRC = Mdummy.cpp Filters.cpp Calendar.cpp PineImport.cpp
 
 ifdef PISOCK_LIB
 SRC := $(SRC) PalmOS.cpp
