added new mailfolder code (commented out) - misc compilation fixes

--- a/src/modules/Makefile
+++ b/src/modules/Makefile
@@ -32,7 +32,7 @@ SRC := $(SRC) PalmOS.cpp
 # for MAL:
 ifdef HAVE_LIBMAL
 CPPFLAGS := $(CPPFLAGS) -DHAVE_LIBMAL -I$(LIBMAL_DIR)/malsync_src/mal/client/common -I$(LIBMAL_DIR)/malsync_src/mal/common -I$(LIBMAL_DIR) 
-PISOCK_LIB := $(PISOCK_LIB) -L $(LIBMAL_DIR) -lmal
+PISOCK_LIB := $(PISOCK_LIB) -L $(LIBMAL_DIR)/.libs -lmal
 endif
 
 endif
