Folder type config / editor splitup

--- a/src/gui/Makefile
+++ b/src/gui/Makefile
@@ -1,24 +1,24 @@
 # Makefile for src/gui directory
 
 CWD = gui
-SRC = wxMApp.cpp wxMFrame.cpp wxFolderView.cpp wxMessageView.cpp \
+SRC = wxMApp.cpp wxMFrame.cpp wxFolderView.cpp \
 wxComposeView.cpp wxMainFrame.cpp wxIconManager.cpp wxMDialogs.cpp  \
 wxlwindow.cpp wxllist.cpp wxlparser.cpp wxMenuDefs.cpp wxOptionsDlg.cpp \
 wxFolderTree.cpp wxDialogLayout.cpp wxMFolderDialogs.cpp wxBrowseButton.cpp \
 wxHeadersDialogs.cpp wxTemplateDialog.cpp wxModulesDlg.cpp \
 wxSubfoldersDialog.cpp wxFiltersDialog.cpp wxWizards.cpp wxFolderMenu.cpp \
-Mdnd.cpp MImport.cpp
+Mdnd.cpp MImport.cpp 
 
-ifdef USE_WXTAB
-SRC += wxtab.cpp
+include ../../makeopts
+
+ifdef EXPERIMENTAL
+SRC += wxMessageViewNew.cpp
+else
+SRC += wxMessageView.cpp
 endif
 
 HDR = $(SRC:.cpp=.h)
 DEP = $(SRC:.cpp=.d)
-
-include ../../makeopts
-
-#XTADDONS = WIN_dnd.cpp WIN_listctrl.cpp WIN_rawlistctrl.cpp WIN_rawtext.cpp
 
 LINK = ../util/strutil.o ../classes/CommonBase.o $(CCLIENTLIB)
 
