renamed install_all target to install and install to install_bin

--- a/debian/rules
+++ b/debian/rules
@@ -48,7 +48,7 @@ binary-arch: checkroot build
 	-rm -rf debian/tmp
 	install -d debian/tmp
 	cd debian/tmp && install -d `cat ../dirs`
-	$(MAKE) install_all DESTDIR=`pwd`/debian/tmp/usr
+	$(MAKE) install DESTDIR=`pwd`/debian/tmp/usr
 # Must have debmake installed for this to work. Otherwise please copy
 # /usr/bin/debstd into the debian directory and change debstd to debian/debstd
 	debstd README TODO 
