1. fixed Windows compilation (don't declare vars twice inside for loops!) 2. fixed bug in install wizard: it doesn't show import page any more if there    are no importers

--- a/res/M.rc
+++ b/res/M.rc
@@ -45,6 +45,8 @@ image		BITMAP	"image.bmp"
 postscript	BITMAP	"postscript.bmp"
 txt		BITMAP	"txt.bmp"
 video		BITMAP	"video.bmp"
+hlink		ICON	"hlink.ico"
+ftplink		ICON	"ftplink.ico"
 
 unknown 	ICON	"unknown.ico"
 
