fixed pisock linkage

--- a/makeopts.in
+++ b/makeopts.in
@@ -45,10 +45,7 @@ endif
 # directory, but listed here in case we build a static library:
 ifeq ($(USE_MODULES),static)
 # for MAL:
-ifdef HAVE_LIBMAL
-PISOCK_LIB := $(PISOCK_LIB) -L $(LIBMAL_DIR)/.libs -lmal
-MODULES_LIBS=$(PISOCK_LIB)
-endif
+MODULES_LIBS:=$(PISOCK_LIB)
 else
 MODULES_LIBS=
 endif
