Filter improvements and minor misc. fixes

--- a/configure.in
+++ b/configure.in
@@ -40,10 +40,7 @@ dnl DEFAULT_USE_LIBTOOL=0
 DEFAULT_USE_MODULES=auto
 DEFAULT_USE_LEAKTRACER=0
 DEFAULT_USE_STRICT=0
-DEFAULT_USE_SSL=0
-DEFAULT_USE_NO_DSA=0
-DEFAULT_USE_NO_IDEA=1	# illegal to use in most of Europe due to ASCOM patent
-DEFAULT_USE_NO_RSA=0
+DEFAULT_USE_SSL=1
 
 M_OVERRIDES(python,python,
 --with-python   use python scripting,
@@ -410,29 +407,11 @@ if test "$USE_SSL" = 1; then
 	AC_CHECK_LIB(c, socket,, AC_CHECK_LIB(socket,socket))
 	AC_CHECK_LIB(c, gethostname,, AC_CHECK_LIB(resolv,gethostname))
 	AC_CHECK_LIB(c, gethostbyname,, AC_CHECK_LIB(nsl,gethostbyname))
-	AC_CHECK_LIB(crypto,CRYPTO_free,
-		AC_CHECK_LIB(ssl,ssl3_connect,
+	AC_CHECK_HEADERS(openssl/ssl.h,
 		[ 	MAKE_USESSL="USESSL=yes"
 			AC_DEFINE(USE_SSL)
-			dnl SSL_LIBS="-lssl -lcrypto"
 			CCLIENT_EXTRAAUTHENTICATORS="\"EXTRAAUTHENTICATORS=ssl\""
-		] ,AC_MSG_ERROR("Cannot find openSSL library libssl."), -lcrypto) ,
-	AC_MSG_ERROR("Cannot find openSSL library libcrypto."))
-
-	if test "$USE_NO_IDEA" = 1; then
-		EXTRACFLAGS="$EXTRACFLAGS -DNO_IDEA"
-		CPPFLAGS="$CPPFLAGS -DNO_IDEA"
-	fi
-
-	if test "$USE_NO_DSA" = 1; then
-		EXTRACFLAGS="$EXTRACFLAGS -DNO_DSA"
-		CPPFLAGS="$CPPFLAGS -DNO_DSA"
-	fi
-	if test "$USE_NO_RSA" = 1; then
-		EXTRACFLAGS="$EXTRACFLAGS -DNO_RSA"
-		CPPFLAGS="$CPPFLAGS -DNO_RSA"
-	fi
-	CCLIENT_EXTRACFLAGS="\"EXTRACFLAGS=$EXTRACFLAGS\""
+		] ,AC_MSG_ERROR("Cannot find openSSL header files openssl/ssl."))
 fi
 AC_SUBST(MAKE_USESSL)
 AC_SUBST(CCLIENT_EXTRAAUTHENTICATORS)
