1. added MLogFrame icon 2. MDialog_GetSelectionsInOrder() function and wxSelectionsOrderDialog    added 3. GUI for choosing the order of folder view list control based on (2) 4. fixed "return (const char *)" in MessageCC::GetHeader()

--- a/res/M.rc
+++ b/res/M.rc
@@ -20,6 +20,7 @@ aaa		ICON	"Micon.ico"
 
 // global icons
 Micon		ICON	"Micon.ico"
+MLogFrame	ICON	"MLogIcon.ico"
 mahogany	BITMAP	"mahogany.bmp"
 #ifdef USE_PYTHON
 PythonPowered	BITMAP	"pythonpower.bmp"
