--- a/src/mail/Makefile
+++ b/src/mail/Makefile
@@ -2,7 +2,7 @@
 
 CWD = mail
 SRC = MailFolder.cpp Message.cpp MailFolderCC.cpp MessageCC.cpp \
-SendMessageCC.cpp ASMailFolder.cpp MailMH.cpp
+SendMessageCC.cpp ASMailFolder.cpp MailMH.cpp HeaderInfoImpl.cpp
 
 include ../../makeopts
 
