--- a/res/M.rc
+++ b/res/M.rc
@@ -104,6 +104,7 @@ python		BITMAP "python.bmp"
 adrbook		BITMAP "adrbook.bmp"
 helpers		BITMAP "helpers.bmp"
 msgview		BITMAP "msgview.bmp"
+folderview	BITMAP "folderview.bmp"
 miscopt		BITMAP "miscopt.bmp"
 access		BITMAP "access.bmp"
 
