make doc ignores errors now as scandoc isn't clever enough for Vadim's coding

--- a/include/Makefile
+++ b/include/Makefile
@@ -34,7 +34,7 @@ dep depend: all
 
 doc:
 	if [ ! -d ../doc/classes ] ; then mkdir ../doc/classes ; fi
-	$(DOCHTML) *.h
+	$(DOCHTML) *.h || true # always succeed
 
 .PHONY: clean doc dep all install msgcat interface
 
